--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -61,13 +61,13 @@
 @include media-md {
     // CURSOR
     #cursor{
-        width: 30px;
-        height: 30px;
+        width: 10px;
+        height: 10px;
     }
 
     #cursor.dark{
-        width: 30px;
-        height: 30px;
+        width: 10px;
+        height: 10px;
     }
     // BACKGROUND TEXT
     .backgroundText{
@@ -76,18 +76,18 @@
     }
 
     // NAVBAR
-    header{
-        width: 100%;
-        height: 70px;
-        display: inline;
-        // backdrop-filter: invert(20%);
-    }
+    // header{
+    //     width: 100%;
+    //     height: 70px;
+    //     display: inline;
+    //     // backdrop-filter: invert(20%);
+    // }
     .menu_btn{
         // position: absolute;
         top: 1.5rem;
         right: 3em;
         // left: 28em;
-        left: 93%;
+        // left: 93%;
         // backdrop-filter: grayscale(100%);
         // width: 530px;
     }
@@ -111,8 +111,20 @@
         .navbar{
             &__item{
                 padding: 7em 0 0 0;
+                
                 li{
-                    font-size: 3em;
+                    &:nth-child(1){
+                        font-size: 3em;
+                    }
+                    &:nth-child(2){
+                        font-size: 3em;
+                    }
+                    &:nth-child(3){
+                        font-size: 3em;
+                    }
+                    &:nth-child(4){
+                        font-size: 3em;
+                    }
                 }
             }
         }
@@ -123,9 +135,10 @@
     // }
 
     #group{
+        display: none;
         position: absolute;
         left: 0.5em;
-        top: 1.5em;
+        top: 5.5em;
         
         // .glitch{
         //     writing-mode: horizontal-tb;
@@ -638,7 +651,7 @@
         padding: 8px;
     }
     .next{
-        bottom: 1em;
+        bottom: 2em;
         left: 50%;
         padding: 8px;
     }
@@ -646,7 +659,7 @@
     .mainDiscography{
         justify-content: center;
         width: 70%;
-        height: 86%;
+        height: 93%;
         overflow: hidden;
         margin-top: 0;
         margin-right: 5%;
@@ -785,6 +798,41 @@
                     writing-mode: vertical-lr;
                     text-orientation: upright;
                 }
+            }
+        }
+    }
+
+    .mainCredits{
+        width: 70vw;
+    
+        &__bio{
+            padding: 0.5em;
+    
+            &__iAm{
+                font-size: 1.5em;
+            }
+    
+            &__name{
+                font-size: 0.6em;
+            }
+        }
+    
+        &__photos{
+            padding: 0.5em;
+    
+            &__from{
+                font-size: 1.5em;
+            }
+    
+            &__source{
+                font-size: 0.6em;
+            }
+        }
+    
+        &__allCredits{
+            &__fansite{
+                font-size: 0.8em;
+                
             }
         }
     }
