--- a/scss/components/pages/_mainProfile.scss
+++ b/scss/components/pages/_mainProfile.scss
@@ -138,6 +138,12 @@
                 transition: .5s ease-in-out;
                 text-align: left;
                 padding: 0;
+
+                &__debut{
+                    position: absolute;
+                    margin-top: -4.5em;
+                    margin-left: -12em;
+                }
                 
     
                 &::before{
@@ -297,9 +303,10 @@
             }
 
             &__names{
-                z-index: 1;
+                // z-index: 1;
                 font-size: 3.3em;
                 transition: .2s ease-in-out;
+                display: block;
                 // position: absolute;
                 // top: 50%;
                 // width: 50%;
@@ -627,6 +634,36 @@
                 // padding-right: -25em;
                 right: -0.5em;
                 
+            }
+
+            &:hover{
+                filter: grayscale(0%);
+                transition: .5s ease-in;
+            }
+        }
+
+        &__concerts{
+            margin-top: 20em;
+            // margin-bottom: 3em;
+            // right: 3em;
+            // width: 30em;
+            // height: 40em;
+            filter: grayscale(100%);
+            transition: .5s ease-in-out;
+            // text-align: center;
+            padding: 2em;
+            // margin-left: auto;
+            // margin-right: auto;
+            text-align: left;
+                
+            
+            &::before{
+                content: "Concerts";
+                position: absolute;
+                font-size: 5em;
+                opacity: .5;
+                // margin-left: -2em;
+                // margin-top: -0.3em;
             }
 
             &:hover{
