--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,58 +1,93 @@
-.footer {
+.socialsDiv{
+    position: absolute;
     right: 0;
     bottom: 0;
-    // width: 25px;
-    // width: 100%;
+    padding-bottom: 2em;
+    z-index: 10;
+    cursor: pointer;
 
-    &__pledis{
-        margin: 1em .5em 0 .1em;
-        width: 15px;
-        opacity: .1;
-        font-family: $discographyfont;
-        z-index: -1;
+    &__socials{
+        writing-mode: vertical-lr;
+        text-orientation: upright;
+    }
+}
+
+.footer {
+    top: 0;
+    left: 0;
+    visibility: hidden;
     
-        &__paragraph{
-            writing-mode: vertical-lr;
-            text-orientation: mixed;
-            text-transform: uppercase;
-            font-weight: lighter;
-            font-size: .7em;
-            padding-bottom: 1em;
-            letter-spacing: 8px;
-            text-align: center;            
+    &.openFooter{
+        visibility: visible;
+    }
+
+    .footerBar{
+        text-align: center;
+        width: 100vw;
+        height: 100vh;
+        background-color: white;
+        overflow: hidden;
+        transition: 2s ease-in-out;
+        transform: translateY(100%);
+
+        &.openFooter{
+            transition: 2s ease-in-out;
+            transform: translateY(0);
+            width: 100vw;
         }
-    }
 
-    &__bar{
-        content: '';
-        border: 1px solid dimgray;
-        height: 195px;
-        width: 1px;
-        margin: 1em 0 .8em .5em;
-        text-align: center;
-        opacity: .1;
-    }
-
-    &__icons{
-        text-align: center;
-
-        &__links{
-            display: block;
-            padding-bottom: 1.3em;
-            transition: .2s ease-in;
-
-            &:hover{
-                color: inherit;
+        &__icons{
+            position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            &__links{
+                display: block;
+                padding-bottom: 1.3em;
                 transition: .2s ease-in;
-            }
-
-            i{
+    
                 &:hover{
-                    transform: rotate(360deg);
-                    transition: .5s ease-in;
-                    opacity: 1;
-                } 
-            }  
+                    color: inherit;
+                    transition: .2s ease-in;
+                }
+    
+                i{
+                    &:hover{
+                        transform: rotate(360deg);
+                        transition: .5s ease-in;
+                        opacity: 1;
+                    } 
+                }  
+            }
         }
     }
 }
+
+// &__pledis{
+//     margin: 1em .5em 0 .1em;
+//     width: 15px;
+//     opacity: .1;
+//     font-family: $discographyfont;
+//     z-index: -1;
+
+//     &__paragraph{
+//         writing-mode: vertical-lr;
+//         text-orientation: mixed;
+//         text-transform: uppercase;
+//         font-weight: lighter;
+//         font-size: .7em;
+//         padding-bottom: 1em;
+//         letter-spacing: 8px;
+//         text-align: center;            
+//     }
+// }
+
+// &__bar{
+//     content: '';
+//     border: 1px solid dimgray;
+//     height: 195px;
+//     width: 1px;
+//     margin: 1em 0 .8em .5em;
+//     text-align: center;
+//     opacity: .1;
+// }
