--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import './components/pages/mainMembers';
 @import './components/pages/mainDiscography';
 @import './components/pages/mainCredits';
+@import './components/pages/mainSocials';
 @import './components/footer';
 @import './components/responsive';
 
