--- a/scss/components/_backgroundText.scss
+++ b/scss/components/_backgroundText.scss
@@ -11,3 +11,31 @@
     text-align: center;
     top: -0.5em;
 }
+
+.menuBackgroundText{
+    position: absolute;
+    // top: 0;
+    right: 0;
+    font-size: 8em;
+    z-index: -1;
+    opacity: .1;
+    filter: invert(30%);
+    // filter: grayscale(100%);
+    // font-family: $navBarFont;
+    font-family: $discographyfont;
+    text-align: center;
+    top: -0.3em;
+}
+
+.footerBackgroundText{
+    position: absolute;
+    bottom: -0.3em;
+    left: 0;
+    // right: .3em;
+    font-size: 8em;
+    z-index: -1;
+    opacity: .1;
+    // filter: invert(30%);
+    font-family: $discographyfont;
+    // text-align: center;
+}
