--- a/scss/components/pages/_mainCredits.scss
+++ b/scss/components/pages/_mainCredits.scss
@@ -10,6 +10,7 @@
     width: 50vw;
     height: 50%;
     overflow: hidden;
+    text-align: center;
     
     // background-color: rgba(128, 128, 128, 0.612);
 
